week01-docker-flask-k8s/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: flask.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app1-service
              port:
                number: 80
        - path: /about
          pathType: Prefix
          backend:
            service:
              name: app2-service
              port:
                number: 80
